--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,9 @@
 site_name: Detectium
 site_url: https://nestorpons.github.io/detectium/site
+site_description: Manual de ayuda para los detectives privados
+
 repo_url: https://github.com/nestorPons/detectium
 repo_name: detectium
-site_description: Manual de ayuda para los detectives privados
 site_author: Néstor Pons Portolés
 copyright: Licencia MIT
 
@@ -10,10 +11,27 @@ copyright: Licencia MIT
 docs_dir: docs
 site_dir: site
 
-nav:
+theme: 
+    name: windmill
+    locale: es
+    search_index_only: true
+    include_search_page: true
+
+
+extra: 
+    logo: img/logo.png
+    version: v1.1.1
+    article_nav_top: false
+    history_buttons: true
+
+extra_css:
+  - assets/css/styles.css
+
+pages:
     - Inicio: index.md
     - Jurisprudecia: juris.md
     - Literatura: litera.md
+    - Trabajos academicos: academy.md
     - Legislacion: 
         - Constitución Española: leg/constitucion.md
         - Ley de Seguridad Privada: leg/lsp.md
@@ -32,22 +50,7 @@ nav:
         - Busqueda en foros: https://boardreader.com 
         - Informes de vehículos: https://sede.dgt.gob.es/es/vehiculos/informe-de-vehiculo 
         - Framework: https://nestorpons.github.io/OSINT-Framework/public/
-    - Trabajos academicos: 
-        - Blanqueo: aca/blanqueo_capitales.md
-        - La prueba: aca/prueba_blanqueo.md
-        - Informes: aca/informes.md
+    
     - Herramientas: 
         - Cámaras de video: util/cam.md
     
-theme: 
-    name: windmill
-    locale: es
-
-extra: 
-    logo: img/logo.png
-    version: v1.1.0
-    article_nav_top: false
-    history_buttons: true
-
-extra_css:
-  - assets/css/styles.css
